# LineRacer

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
client/: package-lock.json  package.json  tsconfig.json
client/old-src/: gui.ts
client/old-src/bsp/: bsp-tree.ts
client/old-src/joglfw/world/: entity.ts
client/old-src/network/: websock.ts
client/src/: Grid.cpp  Grid.h  NetworkController.h  Painter.cpp  Painter.h  Player.ts  TrackPartition.cpp  WorldArea.cpp  color.ts  constants.ts  game.ts  global-state.ts  grid.ts  gui.ts  human-controller.ts  lineMath.h  main.cpp  main.ts  network-controller.ts  painter.ts  track-partition.ts  track.ts  world-area.ts
client/src-webgl/: game.ts  global-state.ts  player-input-handler.ts  terrain-config-handler.ts
client/src-webgl/joglfw/world/: updateable.ts  world.ts
client/src/math/: aabb.ts  axis.ts  functions.ts  line-math.ts  math.ts  vector.ts
client/src/network/: websock.ts
client/src/network/dto/: socket-message.ts
client/src/render/: render.ts
data/shaders/: shape2d.vert  shape3d.frag
server/: package-lock.json
server/src/: main.ts
server/src/dto/: socket-message.ts
src/: Game.cpp  Game.h  Grid.cpp  Grid.h  HumanController.cpp  HumanController.h  NetClient.h  NetConnection.h  NetHost.h  Painter.cpp  Painter.h  Player.cpp  Player.h  Track.cpp  Track.h  TrackPartition.cpp  TrackPartition.h  WorldArea.cpp  WorldArea.h  color.cpp  color.h  lineMath.cpp  lineMath.h  main.cpp  transform.cpp  transform.h
src/GUI/: Button.cpp  Button.h  ButtonRound.cpp  ButtonRound.h  GUIElement.cpp  GUIElement.h  GUIEvent.h  GUISystem.cpp  GUISystem.h  JoinMultiPlayerMenu.h  MainMenu.cpp  MainMenu.h  SinglePlayerMenu.cpp  SinglePlayerMenu.h
src/net/: connection.h  listener.h  net.cpp  result.h  testnet.cpp
www/: index.html  styles.css
